2021-10-08 Danilo Chang

	* Apply Christian's patch:
	  to/from bytearray methods plus refactoring

2021-10-07 Danilo Chang

	* Bump version to v0.10
	* Update drawContours command (interface changed)

2021-10-06 Danilo Chang

	* Implement command: GeneralizedHoughBallard, GeneralizedHoughGuil

2021-10-05 Danilo Chang

	* Implement command: max, min
	* Implement command: approxPolyDP
	* Implement command: findContoursWithHierarchy, drawContoursWithHierarchy
	* Implement command: readOpticalFlow, writeOpticalFlow

2021-10-04 Danilo Chang

	* Implement command: AffineFeature (required version 4.5.0)
	  I use TCL_USE_SIFT flag for this command.
	* Update TrainData command
	* Implement command: sortIdx, repeat

2021-10-03 Danilo Chang

	* Implement command: solveCubic, solvePoly
	* Implement command: estimateAffine2D
	* Improve findHomography command (interface changed)

2021-10-02 Danilo Chang

	* Apply Christian's patch:
	  Improved Tk photo support plus POC VecTcl support
	* configure.ac: Add -std=c++11 flag
	  For OpenCV 4.x+ requires enabled C++11 support issue.
	* Implement command: computeECC, findTransformECC
	* Implement command: cornerEigenValsAndVecs, cornerMinEigenVal
	* Update BackgroundSubtractorMOG2 command

2021-10-01 Danilo Chang

	* Implement command: BackgroundSubtractorKNN
	* Implement command: convexityDefects, matchShapes
	* Improve convexHull command
	* Apply Christian's patch

2021-09-30 Danilo Chang

	* Change AKAZE Diffusivity type variable's name (AKAZE to KAZE)
	* Implement command: KAZE
	* Apply Christian's patch
	* Implement command: BOWKMeansTrainer, BOWImgDescriptorExtractor
	* Implement command: insertChannel
	* Implement command: arcLength, buildPyramid, pointPolygonTest

2021-09-29 Danilo Chang

	* Implement command: extractChannel
	* Implement command: MSER

2021-09-28 Danilo Chang

	* Implement command: computeCorrespondEpilines, findFundamentalMat
	* Implement command: getBuildInformation
	* Implement command: solvePnP
